# loony-dev

./: .gitignore  CLAUDE.md  README.md  SCRATCHPAD.md  config.toml.example  pyproject.toml
.github/workflows/: test.yml
docs/: global-claim-protocol.md
docs/adr/: 0001-css-strategy.md  0002-execution-state-storage.md
loony_dev/: __main__.py  _defaults.toml  cli.py  coderabbit.py  config.py  execution_state.py  git.py  github.py  inotify.py  models.py  orchestrator.py  pipeline.py  pipeline_lease.py  pipeline_log.py  pipeline_session.py  prioritiser.py  project_manager.py  sanitize.py  session.py  session_registry.py  session_transcript.py  supervisor.py  tui.py
loony_dev/agents/: base.py  claude_quota.py  claude_session.py  coding.py  context_file.py  design_agent.py  gemini_quota.py  null_agent.py  planning.py  plugins.py  session_bridge.py  session_hooks.py  session_resume.py
loony_dev/commands/: __init__.py  address-reviews.md  cleanup-stuck.md  commit-message.md  fix-ci.md  fix-hook.md  fix-review.md  implement-issue.md  plan-issue.md  pr-body.md  resolve-conflicts.md
loony_dev/config/: __init__.py  _click.py  _loader.py  _settings.py
loony_dev/github/: __init__.py  branch.py  check_run.py  client.py  comment.py  content.py  issue.py  milestone.py  pull_request.py  repo.py  workflow.py
loony_dev/plugins/: base.py  loader.py
loony_dev/tasks/: __init__.py  base.py  ci_failure_task.py  conflict_task.py  design_task.py  issue_task.py  planning_task.py  plugins.py  pr_review_task.py  stuck_item_task.py
loony_dev/tests/: _claude_stub.py  test_config.py  (+44 more)
(+46 files in other folders)
