[project]
name = "loony-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "textual>=0.70",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
loony-dev = "loony_dev.cli:cli"

[tool.setuptools.packages.find]
include = ["loony_dev*"]

[tool.setuptools.package-data]
"loony_dev.web" = ["static/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27",
]
